[package]
name = "tcping-rust"
version = "0.1.4"      
edition = "2021"
description = "A lightweight, fast, and cross-platform TCP ping tool."
license = "MIT"           
repository = "https://github.com/antstars/tcping-rust"

[[bin]]
name = "tcping"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
ctrlc = "3.4"